# search-engine

./: CMakeLists.txt  README.md
data/: example.xml
include/: dict.hpp  header.hpp  index.hpp  postings.hpp  ranking.hpp  utils.hpp
scripts/: parser.py
src/: dict.cpp  header.cpp  index.cpp  indexer.cpp  postings.cpp  ranking.cpp  searcher.cpp  utils.cpp
